@@ -8,5 +8,7 @@ META.yml
 README
 t/000-load.t
 t/010-basic.t
+t/020-data.t
+t/030-block.t
 xt/author/pod-coverage.t
 xt/author/pod.t
