@@ -2,7 +2,9 @@ Revision history for Parallel-Iterator
 
 0.3.0   2007-10-02
         Made job output and result collection run in sync. Formally job
-        output from the master process ran as quickly as possible.
+        output from the master process ran as quickly as possible. This
+        results in better scheduling and eliminates the possibility of
+        blocking with overlarge data (see t/030-block.t).
         Added support for iterators throwing errors.
 
 0.2.0   2007-09-20
